--- a/app/projects/styles.module.css
+++ b/app/projects/styles.module.css
@@ -1,3 +1,22 @@
 .screenshot {
   border: 1px solid white;
+  margin: 1em;
+}
+
+.projectsHeading {
+  padding: 1em;
+  color: hsl(var(--bulma-primary-h), var(--bulma-primary-l), var(--bulma-primary-s));
+}
+
+.projectDescription {
+  font-size: 1.5em;
+  width: 70ch;
+  text-align: justify;
+  margin-bottom: 2em;
+}
+
+@media(max-width: 800px) {
+  .projectDescription {
+    width: 90%;
+  }
 }
