--- a/app/styles.css
+++ b/app/styles.css
@@ -42,8 +42,8 @@ h2 {
     display: inline;
 }
 
-.buttons {
-    margin: 15px;
+a.button {
+    margin: 1em;
 }
 
 .container {
@@ -57,4 +57,27 @@ h2 {
     .container {
         width: 140ch;
     }
+}
+
+.navBar {
+    width: 100%;
+    height: 4.5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+}
+
+.navButton {
+    height: 100%;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    width: 7em;
+    font-size: 1.5em;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
